--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 [dependencies]
 TSPL = "0.0.13"
+ivy = { git = "https://github.com/VineLang/vine/", optional = true }
+
+[features]
+ivy = ["dep:ivy"]
+
 [dev-dependencies]
 insta = "1.42.0"
 glob = "0.3.2"
